--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
 
 android {
   compileSdkVersion 30
-  buildToolsVersion "30.0.2"
 
   defaultConfig {
     applicationId "codes.chrishorner.datastorebug"
@@ -34,10 +33,10 @@ android {
 
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
-  implementation "com.squareup.okio:okio:2.9.0"
-  implementation "androidx.datastore:datastore-core:1.0.0-alpha02"
+  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
+  implementation "androidx.datastore:datastore-preferences:1.0.0-alpha08"
   implementation 'androidx.core:core-ktx:1.3.2'
   implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation 'com.google.android.material:material:1.2.1'
+  implementation 'com.google.android.material:material:1.3.0'
+  debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 }
